# rust-api-server-template-v1

./: .env.example  .env.local  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  example.http
src/: lib.rs  main.rs
src/core/: account.rs
src/handler/: account_create.rs  mod.rs
src/repo/: account_mongo.rs  mod.rs
