[package]
name = "account-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
envy = "0.4"
anyhow = "1.0.70"
derive_more = "0.99.17"
validator = { version = "0.16", features = ["derive"] }
serde_json = "1.0.95"
chrono = {version = "0.4.24", features = ["serde"]}
async-trait = "0.1.68"
mongodb = "3.0.1"
bson = { version = "2.11.0", features = ["chrono-0_4"] }
thiserror = "1.0.63"
log = "0.4.22"
